epserde/tests/fail/drop_memcase_deref.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase_deref.rs:19:10
   |
17 |     let mem_case = unsafe { Vec::<i32>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
18 |     let v = mem_case.deref();
   |             -------- borrow of `mem_case` occurs here
19 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
20 |     let _vv = v;
   |               - borrow later used here
